@@ -6,6 +6,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * #10134: HttpAuth login throws traceback
 
  new features
+ * add unit tests for db access functions
 
 
 acct_mgr-0.4 (01-Dec-2012) - branch 0.11
